# symmetry-detection

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  run_tests.sh
cmake/: FindLIBIGL.cmake
ext/: plot.py
mesh/: tetrahedron.off
src/: CMakeLists.txt  Signature.cpp  Signature.h  io.h  main.cpp  patch.cpp  patch.h  signature.cpp  signature.h  transformation.cpp  transformation.h  verification.cpp  verification.h
test/: CMakeLists.txt  main.cpp
test/cmake/: FindLIBIGL.cmake
